--- a/colab_merge_tool.ipynb
+++ b/colab_merge_tool.ipynb
@@ -91,11 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title ▶️ Запуск приложения (Gradio) с примерами на скачивание\n",
+    "# ▶️ Запуск приложения (Gradio) — фикс для приватного/нового Gradio\n",
     "import os\n",
     "import pandas as pd\n",
     "import gradio as gr\n",
     "\n",
+    "# гарантируем openpyxl для записи .xlsx\n",
     "try:\n",
     "    import openpyxl  # noqa: F401\n",
     "except Exception as e:\n",
@@ -106,31 +107,41 @@
     "example_first = os.path.join(EX_DIR, \"example_first.csv\")\n",
     "example_second = os.path.join(EX_DIR, \"example_second.xlsx\")\n",
     "\n",
+    "# если примеры не созданы, создадим\n",
     "if not (os.path.exists(example_first) and os.path.exists(example_second)):\n",
-    "    df1 = pd.DataFrame({\"id\":[1,2,3,4],\"name\":[\"Alice\",\"Bob\",\"Carol\",\"Dan\"],\"value1\":[10,20,30,40]})\n",
-    "    df1.to_csv(example_first, index=False, encoding=\"utf-8\")\n",
-    "    df2 = pd.DataFrame({\"id\":[3,4,5,6],\"category\":[\"X\",\"X\",\"Y\",\"Z\"],\"value2\":[300,400,500,600]})\n",
-    "    df2.to_excel(example_second, index=False)\n",
+    "    pd.DataFrame({\"id\":[1,2,3,4],\"name\":[\"Alice\",\"Bob\",\"Carol\",\"Dan\"],\"value1\":[10,20,30,40]}).to_csv(example_first, index=False, encoding=\"utf-8\")\n",
+    "    pd.DataFrame({\"id\":[3,4,5,6],\"category\":[\"X\",\"X\",\"Y\",\"Z\"],\"value2\":[300,400,500,600]}).to_excel(example_second, index=False)\n",
     "\n",
-    "def _read_table(file_obj):\n",
-    "    if file_obj is None:\n",
+    "def _to_path(file_input):\n",
+    "    \"\"\"Возвращает путь к файлу для разных типов входа Gradio: str / dict / объект с .name\"\"\"\n",
+    "    if file_input is None:\n",
     "        return None\n",
-    "    name = getattr(file_obj, \"name\", None) or \"\"\n",
-    "    ext = os.path.splitext(name)[1].lower()\n",
-    "    if ext in [\".xlsx\", \".xls\"]:\n",
-    "        return pd.read_excel(file_obj.name)\n",
-    "    elif ext in [\".csv\", \".txt\"]:\n",
+    "    if isinstance(file_input, str):\n",
+    "        return file_input\n",
+    "    if isinstance(file_input, dict):\n",
+    "        return file_input.get(\"path\") or file_input.get(\"name\")\n",
+    "    return getattr(file_input, \"name\", None)\n",
+    "\n",
+    "def _read_table(file_input):\n",
+    "    \"\"\"Читает CSV/XLSX по пути\"\"\"\n",
+    "    path = _to_path(file_input)\n",
+    "    if not path:\n",
+    "        return None\n",
+    "    ext = os.path.splitext(path)[1].lower()\n",
+    "    if ext in (\".xlsx\", \".xls\"):\n",
+    "        return pd.read_excel(path)\n",
+    "    elif ext in (\".csv\", \".txt\"):\n",
     "        for enc in (\"utf-8-sig\", \"utf-8\", \"cp1251\", \"latin1\"):\n",
     "            try:\n",
-    "                return pd.read_csv(file_obj.name, encoding=enc)\n",
+    "                return pd.read_csv(path, encoding=enc)\n",
     "            except Exception:\n",
     "                continue\n",
-    "        return pd.read_csv(file_obj.name)\n",
-    "    else:\n",
-    "        try:\n",
-    "            return pd.read_excel(file_obj.name)\n",
-    "        except Exception:\n",
-    "            return pd.read_csv(file_obj.name)\n",
+    "        return pd.read_csv(path)  # финальная попытка\n",
+    "    # fallback\n",
+    "    try:\n",
+    "        return pd.read_excel(path)\n",
+    "    except Exception:\n",
+    "        return pd.read_csv(path)\n",
     "\n",
     "def update_keys(file1, file2):\n",
     "    df1 = _read_table(file1) if file1 else None\n",
@@ -140,11 +151,9 @@
     "    default_left = default_right = None\n",
     "    common = [c for c in cols1 if c in cols2]\n",
     "    if common:\n",
-    "        default_left = common[0]\n",
-    "        default_right = common[0]\n",
+    "        default_left = common[0]; default_right = common[0]\n",
     "    elif cols1 and cols2:\n",
-    "        default_left = cols1[0]\n",
-    "        default_right = cols2[0]\n",
+    "        default_left = cols1[0]; default_right = cols2[0]\n",
     "    return gr.update(choices=cols1, value=default_left), gr.update(choices=cols2, value=default_right)\n",
     "\n",
     "def merge_files(file1, file2, mode, left_key, right_key, how):\n",
@@ -155,7 +164,7 @@
     "    if mode == \"Склеить по столбцам (hconcat)\":\n",
     "        m = pd.concat([df1.reset_index(drop=True), df2.reset_index(drop=True)], axis=1)\n",
     "    else:\n",
-    "        if left_key is None or right_key is None:\n",
+    "        if not left_key or not right_key:\n",
     "            return None, None, \"❗ Выберите ключевые столбцы для объединения.\"\n",
     "        if str(left_key) not in map(str, df1.columns) or str(right_key) not in map(str, df2.columns):\n",
     "            return None, None, \"❗ Указанные ключи не найдены в данных.\"\n",
@@ -170,11 +179,13 @@
     "    gr.Markdown(\"## Объединение двух файлов (CSV/Excel) → Excel\")\n",
     "    with gr.Row():\n",
     "        gr.Markdown(\"**📥 Примеры входных файлов:**\")\n",
-    "        gr.File(value=example_first, label=\"Скачать example_first.csv\", interactive=False)\n",
-    "        gr.File(value=example_second, label=\"Скачать example_second.xlsx\", interactive=False)\n",
+    "        # используем DownloadButton для надёжного скачивания\n",
+    "        gr.DownloadButton(label=\"Скачать example_first.csv\", value=example_first)\n",
+    "        gr.DownloadButton(label=\"Скачать example_second.xlsx\", value=example_second)\n",
     "    with gr.Row():\n",
-    "        file1 = gr.File(label=\"Первый файл (CSV/XLSX)\", file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"file\")\n",
-    "        file2 = gr.File(label=\"Второй файл (CSV/XLSX)\", file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"file\")\n",
+    "        # ВАЖНО: type=\"filepath\" (вместо устаревшего 'file')\n",
+    "        file1 = gr.File(label=\"Первый файл (CSV/XLSX)\", file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"filepath\")\n",
+    "        file2 = gr.File(label=\"Второй файл (CSV/XLSX)\", file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"filepath\")\n",
     "    with gr.Row():\n",
     "        mode = gr.Radio([\"Объединить по ключу (join)\", \"Склеить по столбцам (hconcat)\"],\n",
     "                        value=\"Объединить по ключу (join)\", label=\"Способ объединения\")\n",
@@ -189,7 +200,8 @@
     "    file1.change(update_keys, [file1, file2], [left_key, right_key])\n",
     "    file2.change(update_keys, [file1, file2], [left_key, right_key])\n",
     "    merge_btn.click(merge_files, [file1, file2, mode, left_key, right_key, how], [out_preview, out_file, out_info])\n",
-    "demo.launch(share=True)"
+    "\n",
+    "demo.launch(share=True)\n"
    ]
   }
  ],
