--- a/colab_merge_tool.ipynb
+++ b/colab_merge_tool.ipynb
@@ -91,61 +91,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ▶️ Запуск приложения (Gradio) — фикс для приватного/нового Gradio\n",
+    "# ▶️ Запуск приложения (Gradio) — фикс под новые версии\n",
     "import os\n",
     "import pandas as pd\n",
     "import gradio as gr\n",
     "\n",
-    "# гарантируем openpyxl для записи .xlsx\n",
+    "# Нужен openpyxl для записи .xlsx\n",
     "try:\n",
     "    import openpyxl  # noqa: F401\n",
     "except Exception as e:\n",
-    "    raise RuntimeError(\"Не установлено 'openpyxl'. Добавьте 'openpyxl' в requirements.txt вашего репозитория.\") from e\n",
+    "    raise RuntimeError(\"Добавьте 'openpyxl' в requirements.txt вашего репозитория.\") from e\n",
     "\n",
     "EX_DIR = \"/content/examples\"\n",
     "os.makedirs(EX_DIR, exist_ok=True)\n",
     "example_first = os.path.join(EX_DIR, \"example_first.csv\")\n",
     "example_second = os.path.join(EX_DIR, \"example_second.xlsx\")\n",
     "\n",
-    "# если примеры не созданы, создадим\n",
+    "# Если примеры ещё не созданы, создадим\n",
     "if not (os.path.exists(example_first) and os.path.exists(example_second)):\n",
-    "    pd.DataFrame({\"id\":[1,2,3,4],\"name\":[\"Alice\",\"Bob\",\"Carol\",\"Dan\"],\"value1\":[10,20,30,40]}).to_csv(example_first, index=False, encoding=\"utf-8\")\n",
-    "    pd.DataFrame({\"id\":[3,4,5,6],\"category\":[\"X\",\"X\",\"Y\",\"Z\"],\"value2\":[300,400,500,600]}).to_excel(example_second, index=False)\n",
+    "    pd.DataFrame({\"id\":[1,2,3,4],\n",
+    "                  \"name\":[\"Alice\",\"Bob\",\"Carol\",\"Dan\"],\n",
+    "                  \"value1\":[10,20,30,40]}).to_csv(example_first, index=False, encoding=\"utf-8\")\n",
+    "    pd.DataFrame({\"id\":[3,4,5,6],\n",
+    "                  \"category\":[\"X\",\"X\",\"Y\",\"Z\"],\n",
+    "                  \"value2\":[300,400,500,600]}).to_excel(example_second, index=False)\n",
     "\n",
-    "def _to_path(file_input):\n",
-    "    \"\"\"Возвращает путь к файлу для разных типов входа Gradio: str / dict / объект с .name\"\"\"\n",
-    "    if file_input is None:\n",
-    "        return None\n",
-    "    if isinstance(file_input, str):\n",
-    "        return file_input\n",
-    "    if isinstance(file_input, dict):\n",
-    "        return file_input.get(\"path\") or file_input.get(\"name\")\n",
-    "    return getattr(file_input, \"name\", None)\n",
-    "\n",
-    "def _read_table(file_input):\n",
-    "    \"\"\"Читает CSV/XLSX по пути\"\"\"\n",
-    "    path = _to_path(file_input)\n",
+    "def _read_table(path):\n",
+    "    \"\"\"Читает CSV/XLSX по строковому пути (type='filepath').\"\"\"\n",
     "    if not path:\n",
     "        return None\n",
     "    ext = os.path.splitext(path)[1].lower()\n",
     "    if ext in (\".xlsx\", \".xls\"):\n",
     "        return pd.read_excel(path)\n",
-    "    elif ext in (\".csv\", \".txt\"):\n",
+    "    if ext in (\".csv\", \".txt\"):\n",
     "        for enc in (\"utf-8-sig\", \"utf-8\", \"cp1251\", \"latin1\"):\n",
     "            try:\n",
     "                return pd.read_csv(path, encoding=enc)\n",
     "            except Exception:\n",
     "                continue\n",
-    "        return pd.read_csv(path)  # финальная попытка\n",
-    "    # fallback\n",
+    "        return pd.read_csv(path)\n",
+    "    # Fallback\n",
     "    try:\n",
     "        return pd.read_excel(path)\n",
     "    except Exception:\n",
     "        return pd.read_csv(path)\n",
     "\n",
-    "def update_keys(file1, file2):\n",
-    "    df1 = _read_table(file1) if file1 else None\n",
-    "    df2 = _read_table(file2) if file2 else None\n",
+    "def update_keys(file1_path, file2_path):\n",
+    "    df1 = _read_table(file1_path) if file1_path else None\n",
+    "    df2 = _read_table(file2_path) if file2_path else None\n",
     "    cols1 = list(map(str, df1.columns)) if df1 is not None else []\n",
     "    cols2 = list(map(str, df2.columns)) if df2 is not None else []\n",
     "    default_left = default_right = None\n",
@@ -156,11 +149,12 @@
     "        default_left = cols1[0]; default_right = cols2[0]\n",
     "    return gr.update(choices=cols1, value=default_left), gr.update(choices=cols2, value=default_right)\n",
     "\n",
-    "def merge_files(file1, file2, mode, left_key, right_key, how):\n",
-    "    df1 = _read_table(file1)\n",
-    "    df2 = _read_table(file2)\n",
+    "def merge_files(file1_path, file2_path, mode, left_key, right_key, how):\n",
+    "    df1 = _read_table(file1_path)\n",
+    "    df2 = _read_table(file2_path)\n",
     "    if df1 is None or df2 is None:\n",
     "        return None, None, \"❗ Загрузите оба файла.\"\n",
+    "\n",
     "    if mode == \"Склеить по столбцам (hconcat)\":\n",
     "        m = pd.concat([df1.reset_index(drop=True), df2.reset_index(drop=True)], axis=1)\n",
     "    else:\n",
@@ -169,6 +163,7 @@
     "        if str(left_key) not in map(str, df1.columns) or str(right_key) not in map(str, df2.columns):\n",
     "            return None, None, \"❗ Указанные ключи не найдены в данных.\"\n",
     "        m = pd.merge(df1, df2, how=how, left_on=str(left_key), right_on=str(right_key))\n",
+    "\n",
     "    out_path = \"/content/merged_result.xlsx\"\n",
     "    m.to_excel(out_path, index=False)\n",
     "    preview = m.iloc[:2000, :200]\n",
@@ -177,31 +172,43 @@
     "\n",
     "with gr.Blocks(title=\"Merge Tool\") as demo:\n",
     "    gr.Markdown(\"## Объединение двух файлов (CSV/Excel) → Excel\")\n",
+    "\n",
+    "    # Кнопки для скачивания примеров\n",
     "    with gr.Row():\n",
     "        gr.Markdown(\"**📥 Примеры входных файлов:**\")\n",
-    "        # используем DownloadButton для надёжного скачивания\n",
     "        gr.DownloadButton(label=\"Скачать example_first.csv\", value=example_first)\n",
     "        gr.DownloadButton(label=\"Скачать example_second.xlsx\", value=example_second)\n",
+    "\n",
     "    with gr.Row():\n",
-    "        # ВАЖНО: type=\"filepath\" (вместо устаревшего 'file')\n",
-    "        file1 = gr.File(label=\"Первый файл (CSV/XLSX)\", file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"filepath\")\n",
-    "        file2 = gr.File(label=\"Второй файл (CSV/XLSX)\", file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"filepath\")\n",
+    "        # ВАЖНО: type='filepath' вместо 'file'\n",
+    "        file1 = gr.File(label=\"Первый файл (CSV/XLSX)\",\n",
+    "                        file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"filepath\")\n",
+    "        file2 = gr.File(label=\"Второй файл (CSV/XLSX)\",\n",
+    "                        file_types=[\".csv\", \".xlsx\", \".xls\"], type=\"filepath\")\n",
+    "\n",
     "    with gr.Row():\n",
     "        mode = gr.Radio([\"Объединить по ключу (join)\", \"Склеить по столбцам (hconcat)\"],\n",
     "                        value=\"Объединить по ключу (join)\", label=\"Способ объединения\")\n",
-    "        how = gr.Dropdown([\"inner\", \"left\", \"right\", \"outer\"], value=\"inner\", label=\"Тип join (если выбран join)\")\n",
+    "        how = gr.Dropdown([\"inner\", \"left\", \"right\", \"outer\"],\n",
+    "                          value=\"inner\", label=\"Тип join (если выбран join)\")\n",
+    "\n",
     "    with gr.Row():\n",
     "        left_key = gr.Dropdown(choices=[], label=\"Ключевой столбец в первом файле\")\n",
     "        right_key = gr.Dropdown(choices=[], label=\"Ключевой столбец во втором файле\")\n",
+    "\n",
     "    merge_btn = gr.Button(\"🔄 Объединить\")\n",
     "    out_preview = gr.Dataframe(label=\"Предпросмотр результата (первые 2000 строк, 200 столбцов)\")\n",
     "    out_file = gr.File(label=\"Скачать результат (Excel)\")\n",
     "    out_info = gr.Markdown()\n",
+    "\n",
     "    file1.change(update_keys, [file1, file2], [left_key, right_key])\n",
     "    file2.change(update_keys, [file1, file2], [left_key, right_key])\n",
-    "    merge_btn.click(merge_files, [file1, file2, mode, left_key, right_key, how], [out_preview, out_file, out_info])\n",
+    "    merge_btn.click(merge_files,\n",
+    "                    [file1, file2, mode, left_key, right_key, how],\n",
+    "                    [out_preview, out_file, out_info])\n",
     "\n",
-    "demo.launch(share=True)\n"
+    "demo.launch(share=True)\n",
+    "\n"
    ]
   }
  ],
